apps/keycloak/deployment-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: marcoschalet/login-service:latest
        ports:
        - containerPort: 8080
        args:
        - "start-dev"
        resources:
          limits:
            memory: "600Mi"
            cpu: "1.5"
          requests:
            memory: "200Mi"
            cpu: "0.5"
