apps/keycloak/service-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    run: keycloak
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: keycloak
